# ThreadX_big

./: .editorconfig  .flake8  .gitattributes  .gitignore  .markdownlint.yaml  .pylintrc  .tmp_import_check.py  .tmp_import_where.py  .tmp_unused_mods.py  AGENT_INSTRUCTIONS.md  AMPLITUDE_HUNTER_README.md  ANALYSE_PERFORMANCE_COMPLETE.md  ARCHITECTURE_MULTI_LLM.md  BUG_FIX_MIN_PNL_PCT.md  CHANGELOG_PRESET_MANUEL_30.md  CODE_ANALYSIS_OPTIMIZATIONS.md  COMPLETE_CODEBASE_SURVEY.md  DIAGNOSTIC_CHUTE_PERFS.md  DIAGNOSTIC_RALENTISSEMENTS.md  FIX_CACHE_STREAMLIT.md  FIX_FINAL_MA_CROSSOVER.md  FIX_MA_CROSSOVER_OPTIMIZATION.md  FRUSTRATION_CASCADE_ANALYSIS.md  GITHUB_AUTH_SETUP.md  GPU_OPTIMIZATIONS_SUMMARY.md  GPU_SETUP.md  GRID_SWEEP_DEBUG_SESSION.md  GUIDE_UTILISATION_LLM_OPTIMIZER.md  INDEX_DOCUMENTATION_LLM.md  INSTALL.bat  INTEGRATION_MA_CROSSOVER.md  INTEGRATION_UNIFIED_DATA_SETUP.md  LANCER_UI_MA_CROSSOVER.md  Launch_FAST.bat  OPTIMISATION_SWEEP_RAPPORT_FINAL.md  OPTIMIZATIONS_FINAL_REPORT.md  OPTIMIZATIONS_IMPLEMENTATION_PLAN.md  OPTIMIZATIONS_PHASE2_FINAL_SUMMARY.md  OPTIMIZATION_PRESETS_README.md  Open_VSCode_Terminal.bat  (+56 more)
assets/: theme_override.css
benchmarks/: README.md  run_backtests.py  utils.py
benchmarks/_archive/: bench_indicators.py  run_indicators.py
docs/: THREADX_DUMP_COMPLET.txt  Tableau – Plages & pas “classiques” pour backtests.txt  x_QUICK_START_DATA_INGESTION.md
examples/: async_bridge_cli_example.py
notebooks/: multi_llm_optimizer.ipynb
scripts/: build_validated_mapping.py  check_data_coverage.py  check_validate_import.py  dedupe_parquets.py  import_agent_data.py  inspect_parquet_compare.py  migrate_to_validated.py  regenerate_indicator_from_price.py  smoke_read_frame_test.py  tmp_inspect_validate.py
scripts/_legacy/: apply_batch_regen.py  apply_pandera_corrections.py  batch_regenerate_failed.py  build_data_inventory.py  check_duplicates.py  fix_corrupted_indicators.py  refactor_common_imports.py  repair_and_redownload.py  run_pandera_validation.py  summarize_corrections.py  validate_agent_data.py  watch_deletes.py
src/threadx/: LANCER_STREAMLIT.bat  LANCER_STREAMLIT_DEBUG.bat  __init__.py  config.py  data_access.py  streamlit_app.py
src/threadx/backtest/: __init__.py  engine.py  performance.py  sweep.py  validation.py
src/threadx/bridge/: README_ASYNC.md  __init__.py  async_coordinator.py  config.py  controllers.py  exceptions.py  models.py  unified_diversity_pipeline.py  validation.py
src/threadx/cli/: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  __main__.py  backtest_cmd.py  data_cmd.py  indicators_cmd.py  main.py  optimize_cmd.py  utils.py
src/threadx/config/: paths.py
src/threadx/configuration/: __init__.py  default.toml  errors.py  loaders.py  plan.toml  settings.py  settings.toml
src/threadx/data/: __init__.py  arbo_data_folder.txt  normalize.py  schemas.py  validate.py
src/threadx/dataset/: validate.py
src/threadx/gpu/: __init__.py  device_manager.py  multi_gpu.py  profile_persistence.py  vector_checks.py
src/threadx/indicators/: __init__.py  bank.py  bollinger.py  engine.py  gpu_integration.py  indicators_np.py  numpy_ext.py  xatr.py
src/threadx/llm/: __init__.py  client.py  interpreters.py  prompts.py
src/threadx/optimization/: __init__.py  engine.py  multi_sweep.py  parallel_sweep_manager.py  pruning.py  reporting.py  run.py  scenarios.py  ui.py
src/threadx/profiling/: performance_analyzer.py
src/threadx/strategy/: __init__.py  amplitude_hunter.py  bb_atr.py  bollinger_dual.py  gpu_examples.py  ma_crossover.py  model.py
src/threadx/testing/: __init__.py  mocks.py
src/threadx/ui/: UI_STRUCTURE.md  __init__.py  backtest_bridge.py  data_access.py  (+9 more)
tests/: analyze_bottleneck.py  benchmark_cpu_gpu_multigpu.py  conftest.py  example_preset_manuel_30.py  profiling_baseline_quick.py  profiling_baseline_step1.py  profiling_baseline_step3.py  test_accessibility_theming.py  test_adaptation.py  test_architecture_separation.py  test_bb_atr_simple.py  test_bollinger_cpu_gpu_bench.py  test_bollinger_microbench.py  test_bridge_facade.py  test_cache_impact.py  test_callbacks_contracts.py  test_components_backtest.py  test_components_data_indicators.py  test_components_optimization.py  test_config_clean.py  test_config_contract.py  test_config_improvements.py  test_config_loaders.py  test_cupy_install.py  test_data_manager.py  test_date_filtering.py  test_dispatch_logic.py  test_end_to_end_token.py  test_engine_validation.py  test_exception_handling.py  test_final_complet.py  test_gpu_optimizations.py  test_gpu_vs_cpu_speed.py  test_harmonisation.py  test_integration_etape_c.py  test_layout_smoke.py  test_min_pnl_fix.py  test_numba.py  test_optimization_templates.py  test_optimizations_validation.py  (+21 more)
tools/: analyze_module_dependencies.py  analyze_unused_code.py  benchmark_p02.py  benchmark_reference.py  benchmarks_cpu_gpu.py  code_analysis_access.py  data_inventory.py  deep_usage_analysis.py  examine_isolated_modules.py  format_markdown.py  generate_dependency_graph.py  gpu_diagnostic.py  profile_backtest.py  profile_imports.py  profile_runtime_sweep.py  profile_sweep_simple.py  realtime_monitor.py  test_multi_sweep.py  test_multigpu_simple.py  test_p0_optimizations.py
(+29 files in other folders)
