[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ThreadX"
version = "0.5.0"
description = "Framework modulaire de backtesting pour stratégies de trading quantitatif"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ThreadX Team", email = "contact@threadx.dev" }]
keywords = [
    "backtesting",
    "trading",
    "quantitative",
    "finance",
    "crypto",
    "indicators",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.17.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.1.0", "mypy>=1.7.0"]

[project.urls]
Homepage = "https://github.com/threadx/threadx"
Documentation = "https://github.com/threadx/threadx/tree/main/docs"
Repository = "https://github.com/threadx/threadx"
Changelog = "https://github.com/threadx/threadx/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["threadx*"]

[tool.setuptools.package-data]
threadx = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
